<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/about_me"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="119dp" />

        <ImageView
            android:id="@+id/iv_about_picture"
            android:layout_width="183dp"
            android:layout_height="188dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/photo_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_title" />
        <TextView
            android:id="@+id/tv_about_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_about_picture"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/my_name"/>

        <TextView
            android:id="@+id/tv_about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_about_name"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/about_email"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>